2006-06-10  Jim Meyering  <jim@meyering.net>

	Apply this change from gnulib:

	2006-05-30  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
	            Bruno Haible  <bruno@clisp.org>

	* strndup.m4 (gl_FUNC_STRNDUP): Replace the AC_REPLACE_FUNCS with a
	check for the declaration of strnlen and a run test that exposes the
	AIX 5.1 strnlen bug.  In the failure case, #define strndup to
	rpl_strndup.

2006-05-28  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* c-strtod.m4 (gl_C99_STRTOLD): Use a link test rather than a
	compile test, for Tru64 4.0D.

2006-05-24  Jim Meyering  <jim@meyering.net>

	* jm-macros.m4: Require autoconf-2.59d, for its fixed version
	of AC_FUNC_LSTAT_FOLLOWS_SLASHED_SYMLINK.

2006-05-19  Paul Eggert  <eggert@cs.ucla.edu>

	* nanosleep.m4 (gl_FUNC_NANOSLEEP): Rename cache variables to use
	gl_ rather than jm_.  Link, don't run, so that cross-compiles are
	allowed.  Check that resulting type is arithmetic.  Move AC_REQUIRE
	and AC_CHECK_HEADERS_ONCE outside of AC_CACHE_CHECK, since they're
	not really conditional on the cache.
	(gl_PREREQ_NANOSLEEP): Check for sys/select.h.

2006-05-14  Paul Eggert  <eggert@cs.ucla.edu>

	* stdbool.m4 (AC_HEADER_STDBOOL): Fix overly-picky
	test for C99 conformance; (bool) 0.5 is an integer constant
	expression, but (bool) -0.5 is not.  Problem reported by Fedor
	Sergeev in <http://forum.sun.com/jive/thread.jspa?threadID=96202>.

2006-02-17  Eric Blake  <ebb9@byu.net>

	Sync from gnulib.
	* getaddrinfo.m4 (gl_GETADDRINFO): Fix caching error.

2006-04-24  Paul Eggert  <eggert@cs.ucla.edu>

	* unlink-busy.m4 (gl_FUNC_UNLINK_BUSY_TEXT): Use prototype
	to define main with arguments, for C++.  Reported by Eric Blake.
	* getcwd-path-max.m4 (gl_FUNC_GETCWD_PATH_MAX): Likewise.
	* fsusage.m4 (gl_FILE_SYSTEM_USAGE): Specify a return type
	for 'main', for C99 and C++.

2006-04-24  Paul Eggert  <eggert@cs.ucla.edu>

	* fsusage.m4 (gl_FILE_SYSTEM_USAGE): Use return, not exit.
	Don't assume that exit status -1 is valid.