@@ -1,3 +1,10 @@
+2006-06-18  Jim Meyering  <jim@meyering.net>
+
+	* ftruncate.m4 (gl_FUNC_FTRUNCATE): If ftruncate is missing, make
+	configure fail, and request a bug report to inform us about it.
+	Add a comment that, barring reports to the contrary, in 2007 we'll
+	assume ftruncate is universally available.
+
 2006-06-10  Jim Meyering  <jim@meyering.net>
 
 	Apply this change from gnulib:
